@@ -7,7 +7,6 @@ import egm.io.nifi.processors.ngsild.model.PostgreSQLConstants;
 import egm.io.nifi.processors.ngsild.utils.*;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.nifi.processor.exception.ProcessException;
 import org.json.JSONArray;
 import org.json.JSONObject;
 import org.slf4j.Logger;
@@ -25,6 +24,7 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import static egm.io.nifi.processors.ngsild.model.NgsiLdConstants.GENERIC_MEASURE;
+import static egm.io.nifi.processors.ngsild.model.NgsiLdConstants.OBSERVED_AT;
 import static egm.io.nifi.processors.ngsild.model.PostgreSQLConstants.POSTGRESQL_MAX_NAME_LEN;
 
 public class PostgreSQLTransformer {
@@ -135,7 +135,9 @@ public class PostgreSQLTransformer {
     }
 
     private String encodeTimePropertyToColumnName(String encodedAttributeName, String timeProperty) {
-        String encodedName = encodedAttributeName + "_" + PostgreSQLUtils.encodePostgreSQL(timeProperty);
+        String encodedName = Objects.equals(timeProperty, OBSERVED_AT) && !Objects.equals(encodedAttributeName, GENERIC_MEASURE)
+                ? PostgreSQLUtils.encodePostgreSQL(timeProperty)
+                : encodedAttributeName + "_" + PostgreSQLUtils.encodePostgreSQL(timeProperty);
         return PostgreSQLUtils.truncateToMaxPgSize(encodedName).toLowerCase();
     }
 
@@ -162,12 +164,12 @@ public class PostgreSQLTransformer {
         List<String> observedTimestamps =
             attributesByObservedAt.keySet().stream()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
         // get all the attributes without an observedAt timestamp to inject them as is in each row
         List<Attribute> attributesWithoutObservedAt =
             entity.getEntityAttrs().stream()
                 .filter(attribute -> attribute.observedAt == null || attribute.observedAt.isEmpty())
-                .collect(Collectors.toList());
+                .toList();
 
         String oldestTimeStamp;
         if (observedTimestamps.get(0).isEmpty()) {
@@ -207,8 +209,8 @@ public class PostgreSQLTransformer {
                 List<Attribute> commonAttributes =
                     attributes.stream()
                         .filter(attribute -> !Objects.equals(attribute.getAttrName(), GENERIC_MEASURE))
-                        .collect(Collectors.toList());
-                // first fill with the common attributes (the non observed ones)
+                        .toList();
+                // first fill with the common attributes (the non-observed ones)
                 for (Attribute commonAttribute : commonAttributes) {
                     Map<String, String> attributesValues =
                         insertAttributesValues(commonAttribute, valuesForColumns, entity, oldestTimeStamp, listOfFields,
@@ -218,7 +220,7 @@ public class PostgreSQLTransformer {
                 List<Attribute> observedAttributes =
                     attributes.stream()
                         .filter(attribute -> Objects.equals(attribute.getAttrName(), GENERIC_MEASURE))
-                        .collect(Collectors.toList());
+                        .toList();
                 // then for each observed attribute, add a new row
                 for (Attribute observedAttribute : observedAttributes) {
                     Map<String, String> attributesValues =
